# Connect4

./: .gitignore  CMakeLists.txt  MoveSorter.hpp  Position.hpp  README.md  Solver.cpp  Solver.hpp  Transposition.hpp  main.cpp
